chore: 테스트 프로젝트 파일 추가 및 .gitignore 업데이트
- public/projects/test/ 디렉토리에 샘플 파일들 추가
- .gitignore에 테스트 프로젝트 파일들 예외 규칙 추가

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,8 @@ tasks.json
 task-memo.json
 dashboard-memo.json
 path.txt
+
+# sample
+!public/projects/test/tasks.json
+!public/projects/test/task-memo.json
+!public/projects/test/dashboard-memo.json
