--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "project-dashboard",
-  "version": "0.1.0",
-  "private": true,
+  "name": "task-master-monitoring",
+  "version": "1.0.0",
+  "private": false,
+  "description": "Project task dashboard monitoring tool with visualization and management features",
+  "main": "server.js",
+  "bin": {
+    "task-master-monitoring": "./bin/tmm.js",
+    "tmm": "./bin/tmm.js"
+  },
+  "keywords": ["task", "dashboard", "project", "monitoring", "visualization"],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
     "dagre": "^0.8.5",
     "express": "^4.19.2",
@@ -15,7 +20,7 @@
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "reactflow": "^11.11.4",
-    "web-vitals": "^2.1.4"
+    "concurrently": "^9.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,7 +29,8 @@
     "eject": "react-scripts eject",
     "server": "node server.js",
     "dev": "concurrently \"npm run server\" \"npm start\"",
-    "start:prod": "npm run build && npm run server"
+    "start:prod": "npm run build && npm run server",
+    "prepublishOnly": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,10 +51,14 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.21",
-    "concurrently": "^9.2.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:3001"
 }
