--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "concurrently": "^9.2.0",
     "cors": "^2.8.5",
     "dagre": "^0.8.5",
     "express": "^4.19.2",
@@ -25,8 +29,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
-    "reactflow": "^11.11.4",
-    "concurrently": "^9.2.0"
+    "reactflow": "^11.11.4"
   },
   "scripts": {
     "start": "react-scripts start",
