--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@tailwindcss/typography": "^0.5.16",
     "concurrently": "^9.2.0",
     "cors": "^2.8.5",
     "dagre": "^0.8.5",
@@ -28,6 +29,7 @@
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
     "reactflow": "^11.11.4"
   },
